--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:scaleType="matrix"
+                android:scaleType="fitXY"
                 android:visibility="visible"
                 app:srcCompat="@android:drawable/ic_menu_share"/>
 
