--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -24,24 +24,17 @@
             android:stretchMode="columnWidth"
             android:verticalSpacing="0dp"/>
 
-        <FrameLayout
-            android:id="@+id/imgLargeContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorTransparentBlack"
-            android:visibility="gone"
-            android:clickable="true">
-
             <co.za.geartronix.customViews.CustomImageVIew
                 android:id="@+id/imgLarge"
+                android:background="@color/colorTransparentBlack"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:scaleType="fitXY"
-                android:visibility="visible"
+                android:visibility="gone"
+                android:animateLayoutChanges="true"
+                android:clickable="true"
                 app:srcCompat="@android:drawable/ic_menu_share"/>
-
-        </FrameLayout>
 
 
         <FrameLayout
@@ -50,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:animateLayoutChanges="true"
             android:background="@color/colorTransparentBlack">
 
             <LinearLayout
