--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:scaleType="fitXY"
+                android:scaleType="matrix"
                 android:visibility="gone"
                 android:animateLayoutChanges="true"
                 android:clickable="true"
