--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -93,6 +93,7 @@
                             android:layout_gravity="center"
                             android:layout_marginEnd="30dp"
                             android:layout_marginRight="30dp"
+                            android:layout_marginTop="10dp"
                             android:layout_toEndOf="@+id/frmProfPicContainer"
                             android:layout_toRightOf="@+id/frmProfPicContainer"
                             android:background="@android:color/transparent"
@@ -139,7 +140,7 @@
                             android:layout_height="32dp"
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="3dp"
+                            android:layout_marginTop="13dp"
                             android:layout_weight="1"
                             android:onClick="onViewClickedEvent"
                             android:scaleType="fitCenter"
@@ -444,72 +445,9 @@
         </LinearLayout>
     </ScrollView>
 
-
-    <!-- Todo: Create custom view -->
-    <co.za.geartronix.customViews.CustomImageVIew
-        android:id="@+id/imgLarge"
-        android:background="@color/colorTransparentBlack"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:scaleType="matrix"
-        android:visibility="gone"
-        android:animateLayoutChanges="true"
-        android:clickable="true"
-        app:srcCompat="@android:drawable/ic_menu_share"/>
-
-    <FrameLayout
-        android:id="@+id/frmContrlMenu"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:animateLayoutChanges="true"
-        android:background="@color/colorTransparentBlack">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/imgBtnShare"
-                android:layout_width="@dimen/gallery_controll_icon_size"
-                android:layout_height="@dimen/gallery_controll_icon_size"
-                android:background="@color/colorTransparent"
-                android:onClick="onViewClickedEvent"
-                android:scaleType="fitXY"
-                app:srcCompat="@android:drawable/ic_menu_share"/>
-
-            <ImageButton
-                android:id="@+id/imgBtnSavePic"
-                android:layout_width="@dimen/gallery_controll_icon_size"
-                android:layout_height="@dimen/gallery_controll_icon_size"
-                android:layout_marginLeft="@dimen/gallery_control_icon_spacing"
-                android:background="@android:color/transparent"
-                android:onClick="onViewClickedEvent"
-                android:scaleType="fitXY"
-                app:srcCompat="@android:drawable/ic_menu_save"/>
-
-            <ImageButton
-                android:id="@+id/imgMinimize"
-                android:layout_width="@dimen/gallery_controll_icon_size"
-                android:layout_height="@dimen/gallery_controll_icon_size"
-                android:layout_marginLeft="@dimen/gallery_control_icon_spacing"
-                android:background="@drawable/minimize_icon"
-                android:onClick="onViewClickedEvent"
-                android:scaleType="fitXY"
-                />
-
-        </LinearLayout>
-
-    </FrameLayout>
+    <include layout="@layout/full_screen_image_view"
+             android:id="@+id/imgLargeContainer"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent" />
 
 </FrameLayout>
