--- a/app/src/main/res/layout/full_screen_image_view.xml
+++ b/app/src/main/res/layout/full_screen_image_view.xml
@@ -11,8 +11,8 @@
 
     <co.za.geartronix.customViews.CustomImageVIew
         android:id="@+id/imgLarge"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="matrix"
         android:layout_gravity="center"
         app:srcCompat="@mipmap/gallery_icon"/>
