--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
     <LinearLayout
@@ -22,6 +23,11 @@
             android:layout_marginTop="5dp"
             android:text="You"
             android:textColor="#FF265B1E"/>
+
+        <ImageView
+            android:id="@+id/imgAttachment"
+            style="@style/messageImageAttachement"
+            app:srcCompat="@android:drawable/ic_menu_report_image"/>
 
         <TextView
             android:id="@+id/txt_msg"
