--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,17 @@
         <item name="android:windowBackground">@drawable/bg_portrait</item>
     </style>
 
+
+    <style name="messageImageAttachement">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:scaleType">fitStart</item>
+        <item name="android:background">@color/colorTransparentBlack</item>
+        <item name="android:visibility">visible</item>
+    </style>
+
     <style name="geartronixLabel">
         <item name="android:layout_marginTop">10dp</item>
 
