--- a/app/src/main/res/layout/service_item.xml
+++ b/app/src/main/res/layout/service_item.xml
@@ -15,15 +15,15 @@
         android:layout_marginRight="15dp"
         android:background="@color/serviceArrowBackground"
         android:gravity="center"
-        android:paddingLeft="3dp"
-        android:paddingRight="3dp">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <ImageView
             android:id="@+id/imgArrow"
-            android:layout_width="45dp"
+            android:layout_width="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:scaleType="center"
+            android:scaleType="fitStart"
             app:srcCompat="@drawable/service_arrow"/>
 
     </FrameLayout>
