--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/action_edit"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:icon="@drawable/edit_icon"
         android:orderInCategory="100"
         android:title="@string/edit"
         app:showAsAction="always"/>
