--- a/app/src/main/res/menu/services_menu.xml
+++ b/app/src/main/res/menu/services_menu.xml
@@ -4,7 +4,13 @@
     <item
         android:id="@+id/action_request_service"
         android:icon="@drawable/request_service_icon"
-        android:orderInCategory="100"
         android:title="@string/edit"
+        android:visible="false"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_help"
+        android:icon="@drawable/help_icon"
+        android:title="@string/help"
+        app:showAsAction="never"/>
 </menu>
