--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -162,7 +162,7 @@
                             android:layout_width="30dp"
                             android:layout_height="32dp"
                             android:layout_alignParentRight="true"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="13dp"
                             android:layout_marginTop="13dp"
                             android:background="@android:color/transparent"
                             android:onClick="onViewClickedEvent"
@@ -180,13 +180,14 @@
                     android:layout_height="85dp"
                     >
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
+                    <RelativeLayout
+                        android:layout_width="330dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:orientation="horizontal">
+                        android:layout_gravity="center_horizontal">
 
                         <LinearLayout
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignLeft="@+id/lnrViewMessages"
                             android:id="@+id/lnrViewPoints"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
@@ -212,11 +213,8 @@
                             android:id="@+id/lnrViewMessages"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:layout_centerInParent="true"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginEnd="60dp"
-                            android:layout_marginLeft="60dp"
-                            android:layout_marginRight="60dp"
-                            android:layout_marginStart="60dp"
                             android:onClick="onViewClickedEvent"
                             android:orientation="vertical">
 
@@ -235,6 +233,8 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:layout_alignParentRight="true"
+                            android:layout_alignRight="@+id/lnrViewMessages"
                             android:id="@+id/lnrViewCars"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
@@ -256,7 +256,7 @@
 
                         </LinearLayout>
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
                     <FrameLayout
                         android:id="@+id/frmOverlay1"
