--- a/app/src/main/res/layout/profile_more_options_layout.xml
+++ b/app/src/main/res/layout/profile_more_options_layout.xml
@@ -8,13 +8,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="0dp"
         android:background="@color/cardview_light_background"
         android:orientation="vertical"
-        android:paddingBottom="30dp"
+        android:paddingBottom="20dp"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
-        android:paddingTop="10dp">
+        android:paddingTop="0dp">
 
 
         <RelativeLayout
@@ -32,7 +32,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/imgIcon"
                 android:layout_toRightOf="@+id/imgIcon"
-                android:text="View cars"/>
+                android:text="View your cars"/>
 
         </RelativeLayout>
 
@@ -51,7 +51,26 @@
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/imgIcon2"
                 android:layout_toRightOf="@+id/imgIcon2"
-                android:text="View messages"/>
+                android:text="View your messages"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/itemEdtitProfile"
+            style="@style/moreDialogContainer">
+
+            <ImageView
+                android:id="@+id/imgIcon3"
+                style="@style/moreDialogIcon"
+                android:layout_centerVertical="true"
+                app:srcCompat="@drawable/edit_icon_dark"/>
+
+            <TextView
+                style="@style/moreDialogLbalel"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/imgIcon3"
+                android:layout_toRightOf="@+id/imgIcon3"
+                android:text="Edit your profile"/>
 
         </RelativeLayout>
 
