--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -21,4 +21,11 @@
         android:title="@string/help"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/action_save"
+        android:icon="@drawable/save_icon"
+        android:visible="false"
+        android:title="Save"
+        app:showAsAction="always"/>
+
 </menu>
