--- a/app/src/main/res/layout/activity_first_time.xml
+++ b/app/src/main/res/layout/activity_first_time.xml
@@ -7,175 +7,189 @@
              tools:context="co.za.geartronix.activities.SplashActivity"
              android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/logo"/>
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingBottom="50dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="10dp">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="60dp"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
-                style="@style/mediumLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Welcome and thank you for choosing Geartronix, to proceed please select an option below"/>
-
-            <LinearLayout
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                app:srcCompat="@drawable/logo"/>
 
-                <LinearLayout
-                    android:id="@+id/btnCreateAccount"
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:background="@color/colorgreyBg"
-                    android:onClick="onViewClickedEvent"
-                    android:orientation="vertical"
-                    android:paddingBottom="11dp"
-                    android:paddingEnd="8dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:paddingStart="8dp"
-                    android:paddingTop="7dp">
-
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:id="@+id/imgHomeTile"
-                            android:layout_width="match_parent"
-                            android:layout_height="100dp"
-                            android:layout_gravity="center"
-                            app:srcCompat="@drawable/register_icon"/>
-
-                        <ImageView
-                            android:id="@+id/imageView3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="32dp"
-                            android:layout_gravity="right"
-                            android:layout_marginEnd="-11dp"
-                            android:layout_marginRight="-11dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/colorTransparent"
-                            android:scaleType="fitEnd"
-                            app:srcCompat="@mipmap/more_icon"/>
-
-                    </FrameLayout>
-
-                    <TextView
-                        android:id="@+id/txtHomeTile"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@+id/imgHomeTile"
-                        android:text="Create account"
-                        android:textAlignment="center"
-                        android:textColor="@color/textWhite"/>
-
-                </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingBottom="50dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp">
 
                 <TextView
+                    android:id="@+id/textView"
                     style="@style/mediumLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="13dp"
-                    android:layout_marginTop="13dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="OR"
-                    android:textAlignment="center"/>
+                    android:text="Welcome and thank you for choosing Geartronix, to proceed please select an option below"/>
 
-                <LinearLayout
-                    android:id="@+id/btnLoginExistingUser"
-                    android:layout_width="140dp"
+                <android.support.percent.PercentRelativeLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:background="@color/colorgreyBg"
-                    android:onClick="onViewClickedEvent"
-                    android:orientation="vertical"
-                    android:paddingBottom="11dp"
-                    android:paddingEnd="8dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:paddingStart="8dp"
-                    android:paddingTop="7dp">
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:gravity="top">
 
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:id="@+id/imgHomeTile2"
-                            android:layout_width="match_parent"
-                            android:layout_height="100dp"
-                            android:layout_gravity="center"
-                            app:srcCompat="@drawable/signin_icon"/>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="32dp"
-                            android:layout_gravity="right"
-                            android:layout_marginEnd="-11dp"
-                            android:layout_marginRight="-11dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/colorTransparent"
-                            android:scaleType="fitEnd"
-                            app:srcCompat="@mipmap/more_icon"/>
-
-                    </FrameLayout>
-
-                    <TextView
-                        android:id="@+id/txtHomeTile2"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:id="@+id/btnCreateAccount"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
-                        android:layout_below="@+id/imgHomeTile"
-                        android:text="Sign in"
-                        android:textAlignment="center"
-                        android:textColor="@color/textWhite"/>
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="30dp"
+                        android:background="@color/colorgreyBg"
+                        android:onClick="onViewClickedEvent"
+                        android:orientation="vertical"
+                        android:paddingBottom="11dp"
+                        android:paddingEnd="8dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:paddingStart="8dp"
+                        android:paddingTop="7dp"
+                        app:layout_widthPercent="40%">
 
-                </LinearLayout>
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/imgHomeTile"
+                                android:layout_width="match_parent"
+                                android:layout_height="100dp"
+                                android:layout_gravity="center"
+                                app:srcCompat="@drawable/register_icon"/>
+
+                            <ImageView
+                                android:id="@+id/imageView3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="32dp"
+                                android:layout_gravity="right"
+                                android:layout_marginEnd="-11dp"
+                                android:layout_marginRight="-11dp"
+                                android:layout_marginTop="10dp"
+                                android:background="@color/colorTransparent"
+                                android:scaleType="fitEnd"
+                                app:srcCompat="@mipmap/more_icon"/>
+
+                        </FrameLayout>
+
+                        <TextView
+                            android:id="@+id/txtHomeTile"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/imgHomeTile"
+                            android:layout_marginBottom="6dp"
+                            android:text="Create account"
+                            android:textAlignment="center"
+                            android:textColor="@color/textWhite"/>
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/lblOr"
+                        style="@style/mediumLabel"
+                        android:layout_height="100dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="13dp"
+                        android:layout_marginTop="13dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:text="OR"
+                        android:textAlignment="center"
+                        app:layout_widthPercent="20%"/>
+
+                    <LinearLayout
+                        android:id="@+id/btnLoginExistingUser"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="30dp"
+                        android:background="@color/colorgreyBg"
+                        android:onClick="onViewClickedEvent"
+                        android:orientation="vertical"
+                        android:paddingBottom="11dp"
+                        android:paddingEnd="8dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:paddingStart="8dp"
+                        android:paddingTop="7dp"
+                        app:layout_widthPercent="40%">
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/imgHomeTile2"
+                                android:layout_width="match_parent"
+                                android:layout_height="100dp"
+                                android:layout_gravity="center"
+                                app:srcCompat="@drawable/signin_icon"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="32dp"
+                                android:layout_gravity="right"
+                                android:layout_marginEnd="-11dp"
+                                android:layout_marginRight="-11dp"
+                                android:layout_marginTop="10dp"
+                                android:background="@color/colorTransparent"
+                                android:scaleType="fitEnd"
+                                app:srcCompat="@mipmap/more_icon"/>
+
+                        </FrameLayout>
+
+                        <TextView
+                            android:id="@+id/txtHomeTile2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/imgHomeTile"
+                            android:layout_marginBottom="6dp"
+                            android:text="Sign in"
+                            android:textAlignment="center"
+                            android:textColor="@color/textWhite"/>
+
+                    </LinearLayout>
+
+                </android.support.percent.PercentRelativeLayout>
+
 
             </LinearLayout>
 
-
         </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 
     <VideoView
         android:id="@+id/vdoVoda"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:visibility="gone"/>
 
 </FrameLayout>
